--- a/static/index.html
+++ b/static/index.html
@@ -3,28 +3,30 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Site Analytics</title>
+  <title>Зарплатный анализ по грейдам</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial, Helvetica, sans-serif; max-width: 1200px; margin: 20px auto; padding: 0 12px; }
-    #chart-container { width: 100%; max-width: 900px; height: 400px; margin: 0 auto; }
+    body { font-family: Arial, sans-serif; max-width: 1200px; margin: 20px auto; padding: 0 12px; background: #f9f9fb; }
+    h1 { text-align: center; color: #333; }
+    .controls { margin: 20px 0; text-align: center; }
+    .controls label { margin: 0 10px; font-weight: bold; }
+    select { padding: 6px; border-radius: 6px; border: 1px solid #ccc; }
+    #chart-container { position: relative; width: 100%; max-width: 1000px; height: 500px; margin: 30px auto; background: white; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); overflow: hidden; }
+    #ruler { height: 50px; background: #222; position: relative; margin-top: -10px; border-bottom-left-radius: 12px; border-bottom-right-radius: 12px; }
+    .grade-line { position: absolute; width: 4px; height: 100%; top: 0; cursor: ew-resize; z-index: 10; border-radius: 2px; box-shadow: 0 0 10px rgba(0,0,0,0.3); }
+    .grade-label { position: absolute; top: -30px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.7); color: white; padding: 4px 8px; border-radius: 4px; font-size: 12px; white-space: nowrap; pointer-events: none; }
+    .ruler-tick { position: absolute; bottom: 8px; font-size: 11px; color: #aaa; transform: translateX(-50%); }
   </style>
 </head>
 <body>
-  <h1>Site Analytics</h1>
-  <p>Аналитика распределения зарплат по вакансиям и резюме</p>
+  <h1>Зарплатный анализ по грейдам</h1>
+  <p style="text-align:center;color:#555;">Перетаскивайте цветные линии, чтобы задать границы грейдов</p>
 
-  <div style="margin-bottom:16px">
-    <label>Вакансия:
-      <select id="vacancyFilter"></select>
-    </label>
-    <label style="margin-left:16px">Город:
-      <select id="cityFilter"><option value="">Все</option></select>
-    </label>
-    <label style="margin-left:16px">Квартал:
-      <select id="quarterFilter"></select>
-    </label>
-    <label style="margin-left:16px">Шаг ЗП:
+  <div class="controls">
+    <label>Вакансия: <select id="vacancyFilter"></select></label>
+    <label>Город: <select id="cityFilter"><option value="">Все</option></select></label>
+    <label>Квартал: <select id="quarterFilter"></select></label>
+    <label>Шаг ЗП: 
       <select id="stepFilter">
         <option value="5">5 тыс</option>
         <option value="10">10 тыс</option>
@@ -33,155 +35,150 @@
       </select>
     </label>
   </div>
+
   <div id="chart-container">
     <canvas id="chart"></canvas>
+    <div id="ruler"></div>
   </div>
 
   <script>
     let allData = [];
     let chartInstance = null;
 
-    function getQuarter(dateStr) {
-      const d = new Date(dateStr);
-      if (isNaN(d)) return '';
-      const year = d.getFullYear();
-      const month = d.getMonth();
-      const q = Math.floor(month / 3) + 1;
-      return `${year} Q${q}`;
+    // Грейды и их цвета
+    const grades = [
+      { name: "Intern", color: "#FF9800", value: 60 },
+      { name: "Junior", color: "#4CAF50", value: 140 },
+      { name: "Middle", color: "#2196F3", value: 280 },
+      { name: "Senior", color: "#9C27B0", value: 500 },
+      { name: "Lead",   color: "#F44336", value: 800 }
+    ];
+
+    function getQuarter(d) {
+      const date = new Date(d);
+      const y = date.getFullYear();
+      const q = Math.floor(date.getMonth() / 3) + 1;
+      return `${y} Q${q}`;
     }
 
-    function fillFilters(data) {
-      const vacancySet = new Set();
-      const citySet = new Set();
-      const quarterSet = new Set();
-      for (const r of data) {
-        if (r.vacancy_category) vacancySet.add(r.vacancy_category);
-        if (r.city && r.city !== 'Все города') citySet.add(r.city);
-        if (r.upload_date) quarterSet.add(getQuarter(r.upload_date));
-      }
+    // === Загрузка и фильтры ===
+    async function loadData() {
+      const res = await fetch('/api/analytics?limit=1000');
+      if (!res.ok) return alert('Ошибка загрузки данных');
+      allData = await res.json();
+      fillFilters();
+      renderChart();
+    }
 
-      const vacancyFilter = document.getElementById('vacancyFilter');
-      const cityFilter = document.getElementById('cityFilter');
-      const quarterFilter = document.getElementById('quarterFilter');
-
-      const sortedVacancies = Array.from(vacancySet).sort();
-      vacancyFilter.innerHTML = sortedVacancies.map(v => `<option value="${v}">${v}</option>`).join('');
-      if (sortedVacancies.length > 0) vacancyFilter.value = sortedVacancies[0];
-
-      const sortedCities = Array.from(citySet).sort();
-      cityFilter.innerHTML = '<option value="">Все</option>' + sortedCities.map(v => `<option value="${v}">${v}</option>`).join('');
-
-      const sortedQuarters = Array.from(quarterSet).sort((a, b) => {
-        const [yA, qA] = a.split(' Q');
-        const [yB, qB] = b.split(' Q');
-        return (yB - yA) || (qB - qA);
+    function fillFilters() {
+      const sets = { vacancy: new Set(), city: new Set(), quarter: new Set() };
+      allData.forEach(r => {
+        if (r.vacancy_category) sets.vacancy.add(r.vacancy_category);
+        if (r.city && r.city !== 'Все города') sets.city.add(r.city);
+        if (r.upload_date) sets.quarter.add(getQuarter(r.upload_date));
       });
-      quarterFilter.innerHTML = sortedQuarters.map(v => `<option value="${v}">${v}</option>`).join('');
-      if (sortedQuarters.length > 0) quarterFilter.value = sortedQuarters[0];
+
+      document.getElementById('vacancyFilter').innerHTML = [...sets.vacancy].sort().map(v => `<option>${v}</option>`).join('');
+      document.getElementById('cityFilter').innerHTML = '<option value="">Все</option>' + [...sets.city].sort().map(v => `<option>${v}</option>`).join('');
+      document.getElementById('quarterFilter').innerHTML = [...sets.quarter].sort((a,b) => b.localeCompare(a)).map(v => `<option>${v}</option>`).join('');
+
+      // defaults
+      document.getElementById('vacancyFilter').value = document.getElementById('vacancyFilter').options[0]?.value || '';
+      document.getElementById('quarterFilter').value = document.getElementById('quarterFilter').options[0]?.value || '';
     }
 
-    function parseSalaryData(jsonField) {
-      if (!jsonField || typeof jsonField !== 'object') return {};
-      return jsonField;
-    }
-
-    function filterData() {
-      const vacancy = document.getElementById('vacancyFilter').value;
-      const city = document.getElementById('cityFilter').value;
-      const quarter = document.getElementById('quarterFilter').value;
+    // === Фильтрация ===
+    function getFilteredData() {
+      const v = document.getElementById('vacancyFilter').value;
+      const c = document.getElementById('cityFilter').value;
+      const q = document.getElementById('quarterFilter').value;
 
       return allData.filter(r => {
-        const matchesVacancy = r.vacancy_category === vacancy;
-        const matchesCity = city === '' ? r.city === 'Все города' : r.city === city;
-        const matchesQuarter = getQuarter(r.upload_date) === quarter;
-        return matchesVacancy && matchesCity && matchesQuarter;
+        if (v && r.vacancy_category !== v) return false;
+        if (c === '' && r.city !== 'Все города') return false;
+        if (c && r.city !== c) return false;
+        if (q && getQuarter(r.upload_date) !== q) return false;
+        return true;
       });
     }
 
-    function aggregateData(rawByRange, step) {
-      const aggregated = {};
+    // === Агрегация по шагу ===
+    function aggregate(raw, step) {
+      const result = {};
       let start = 0;
       while (start < 1000) {
         const end = start + step;
         const key = start === 0 ? `less_${end}k` : `${start}k_${end}k`;
         let sum = 0;
-
-        for (const rangeKey in rawByRange) {
-          if (rangeKey === 'more_1000k') continue;
-          if (rangeKey === 'less_5k') {
-            if (start === 0) sum += rawByRange[rangeKey] || 0;
-            continue;
-          }
-          const [lStr, hStr] = rangeKey.split('_');
-          const low = parseInt(lStr.replace('k', ''));
-          const high = parseInt(hStr.replace('k', ''));
-          if (low >= start && high <= end) {
-            sum += rawByRange[rangeKey] || 0;
-          }
+        for (const k in raw) {
+          if (k === 'more_1000k') continue;
+          if (k === 'less_5k' && start === 0) { sum += raw[k]; continue; }
+          const [l, h] = k.split('_').map(x => parseInt(x.replace('k','')));
+          if (l >= start && h <= end) sum += raw[k] || 0;
         }
-        aggregated[key] = sum;
+        result[key] = sum;
         start = end;
       }
-      aggregated['more_1000k'] = rawByRange['more_1000k'] || 0;
-      return aggregated;
+      result['more_1000k'] = raw['more_1000k'] || 0;
+      return result;
     }
 
-    function formatLabels(aggregatedRanges, step) {
-      return aggregatedRanges.map(key => {
-        if (key === 'more_1000k') return `выше 1000`;
-        if (key.startsWith('less_')) {
-          const limit = key.match(/less_(\d+)k/)[1];
-          return `до ${limit}`;
-        }
-        const match = key.match(/(\d+)k_\d+k/);
-        if (match) {
-          return match[1];
-        }
-        return key;
-      });
+    function formatLabel(key, step) {
+      if (key === 'more_1000k') return 'выше 1000';
+      if (key.startsWith('less_')) return `до ${key.match(/\d+/)[0]}`;
+      return key.match(/(\d+)k/)[1];
     }
 
+    // === Отрисовка ===
     function renderChart() {
-      const data = filterData();
+      const data = getFilteredData();
+      if (data.length === 0) return;
 
-      const baseResumes = {};
-      const baseVacancies = {};
-      const baseRanges = new Set();
+      // Средние значения по базовым 5k диапазонам
+      const base = { resumes: {}, vacancies: {} };
+      const ranges = new Set();
 
-      data.forEach(record => {
-        const resumes = parseSalaryData(record.resumes_pct_json);
-        const vacancies = parseSalaryData(record.vacancies_pct_json);
-        Object.keys(resumes).forEach(k => baseRanges.add(k));
-        Object.keys(vacancies).forEach(k => baseRanges.add(k));
-      });
-
-      const sortedBase = Array.from(baseRanges).sort((a, b) => {
-        const order = ['less_5k', ...Array.from({length: 200}, (_, i) => `${(i+1)*5}k_${(i+2)*5}k`), 'more_1000k'];
-        return order.indexOf(a) - order.indexOf(b);
-      });
-
-      sortedBase.forEach(range => {
-        let rSum = 0, rCnt = 0, vSum = 0, vCnt = 0;
-        data.forEach(rec => {
-          if (rec.resumes_pct_json && rec.resumes_pct_json[range] !== undefined) {
-            rSum += rec.resumes_pct_json[range];
-            rCnt++;
-          }
-          if (rec.vacancies_pct_json && rec.vacancies_pct_json[range] !== undefined) {
-            vSum += rec.vacancies_pct_json[range];
-            vCnt++;
-          }
+      data.forEach(r => {
+        ['resumes_pct_json', 'vacancies_pct_json'].forEach(field => {
+          const obj = r[field] || {};
+          Object.keys(obj).forEach(k => ranges.add(k));
         });
-        baseResumes[range] = rCnt ? rSum / rCnt : 0;
-        baseVacancies[range] = vCnt ? vSum / vCnt : 0;
       });
 
-      const step = parseInt(document.getElementById('stepFilter').value) || 20;
+      [...ranges].sort((a,b) => {
+        const order = ['less_5k', ...Array.from({length:200},(_,i)=>`${(i+1)*5}k_${(i+2)*5}k`), 'more_1000k'];
+        return order.indexOf(a) - order.indexOf(b);
+      }).forEach(range => {
+        let rs = 0, rc = 0, vs = 0, vc = 0;
+        data.forEach(r => {
+          if (r.resumes_pct_json?.[range] !== undefined) { rs += r.resumes_pct_json[range]; rc++; }
+          if (r.vacancies_pct_json?.[range] !== undefined) { vs += r.vacancies_pct_json[range]; vc++; }
+        });
+        base.resumes[range] = rc ? rs/rc : 0;
+        base.vacancies[range] = vc ? vs/vc : 0;
+      });
 
-      const aggResumes = aggregateData(baseResumes, step);
-      const aggVacancies = aggregateData(baseVacancies, step);
-      const rawLabels = Object.keys(aggResumes);
-      const niceLabels = formatLabels(rawLabels, step);
+      const step = +document.getElementById('stepFilter').value;
+      const aggR = aggregate(base.resumes, step);
+      const aggV = aggregate(base.vacancies, step);
+
+      const labels = Object.keys(aggR).map(k => formatLabel(k, step));
+      const chartDataR = Object.values(aggR);
+      const chartDataV = Object.values(aggV);
+
+      // Подсчёт реальных зарплатных точек для линейки
+      const salaryPoints = [];
+      let current = 0;
+      Object.keys(aggR).forEach((key, i) => {
+        if (key === 'more_1000k') {
+          salaryPoints.push(1000);
+        } else if (key.startsWith('less_')) {
+          salaryPoints.push(parseInt(key.match(/\d+/)[0]));
+        } else {
+          salaryPoints.push(current + step);
+        }
+        current += step;
+      });
 
       const ctx = document.getElementById('chart').getContext('2d');
       if (chartInstance) chartInstance.destroy();
@@ -189,62 +186,81 @@
       chartInstance = new Chart(ctx, {
         type: 'bar',
         data: {
-          labels: niceLabels,
+          labels: labels,
           datasets: [
-            {
-              label: 'Резюме %',
-              data: Object.values(aggResumes),
-              type: 'line',
-              borderColor: 'rgba(54,162,235,0.9)',
-              backgroundColor: 'rgba(54,162,235,0.1)',
-              tension: 0.2,
-              fill: true,
-              pointRadius: 1,
-              borderWidth: 1,
-              order: 1
-            },
-            {
-              label: 'Вакансии %',
-              data: Object.values(aggVacancies),
-              type: 'bar',
-              backgroundColor: 'rgba(255,99,132,0.6)',
-              borderColor: 'rgba(255,99,132,1)',
-              borderWidth: 1,
-              barThickness: 10,
-              order: 2
-            }
+            { label: 'Резюме %', data: chartDataR, type: 'line', borderColor: '#2196F3', backgroundColor: 'rgba(33,150,243,0.1)', fill: true, tension: 0.3, pointRadius: 2, borderWidth: 2 },
+            { label: 'Вакансии %', data: chartDataV, type: 'bar', backgroundColor: 'rgba(255,99,132,0.6)', borderColor: '#f44336', barThickness: 20 }
           ]
         },
         options: {
-          plugins: { legend: { position: 'top' } },
-          scales: {
-            x: { ticks: { autoSkip: false, maxRotation: 90, minRotation: 90 } },
-            y: { beginAtZero: true }
-          },
-          interaction: { mode: 'index', intersect: false },
           responsive: true,
-          maintainAspectRatio: false
+          maintainAspectRatio: false,
+          plugins: { legend: { position: 'top' } },
+          scales: { x: { ticks: { maxRotation: 90, minRotation: 90 } }, y: { beginAtZero: true } }
         }
       });
-    }
 
-    async function loadData() {
-      const res = await fetch('/api/analytics?limit=1000');
-      if (!res.ok) {
-        document.body.innerHTML += `<p style="color:red">Ошибка загрузки: ${res.status}</p>`;
-        return;
-      }
-      allData = await res.json();
-      fillFilters(allData);
-      renderChart();
-    }
+      // === Линейка и грейд-линии ===
+      const ruler = document.getElementById('ruler');
+      ruler.innerHTML = '';
+      const containerWidth = ruler.clientWidth;
 
-    window.addEventListener('DOMContentLoaded', () => {
-      ['vacancyFilter','cityFilter','quarterFilter','stepFilter'].forEach(id => {
-        document.getElementById(id).addEventListener('change', renderChart);
+      // Деления на линейке
+      salaryPoints.forEach((val, i) => {
+        const x = (i / (salaryPoints.length - 1)) * containerWidth;
+        const tick = document.createElement('div');
+        tick.className = 'ruler-tick';
+        tick.style.left = x + 'px';
+        tick.textContent = val;
+        ruler.appendChild(tick);
       });
-      loadData();
+
+      // Грейд-линии
+      grades.forEach((g, i) => {
+        const line = document.createElement('div');
+        line.className = 'grade-line';
+        line.style.backgroundColor = g.color;
+        line.dataset.index = i;
+
+        const label = document.createElement('div');
+        label.className = 'grade-label';
+        label.textContent = g.name;
+
+        line.appendChild(label);
+        ruler.appendChild(line);
+
+        // Позиционирование
+        function updatePosition() {
+          const percent = g.value / 1000;
+          const x = percent * containerWidth;
+          line.style.left = x + 'px';
+          g.currentValue = g.value;
+        }
+        updatePosition();
+
+        // Drag & drop
+        let dragging = false;
+        line.addEventListener('mousedown', e => { dragging = true; e.preventDefault(); });
+        document.addEventListener('mousemove', e => {
+          if (!dragging) return;
+          const rect = ruler.getBoundingClientRect();
+          let newX = e.clientX - rect.left;
+          newX = Math.max(0, Math.min(containerWidth, newX));
+          const newPercent = newX / containerWidth;
+          g.value = Math.round(newPercent * 1000 / step) * step;
+          updatePosition();
+        });
+        document.addEventListener('mouseup', () => dragging = false);
+      });
+    }
+
+    // События
+    ['vacancyFilter','cityFilter','quarterFilter','stepFilter'].forEach(id => {
+      document.getElementById(id).addEventListener('change', renderChart);
     });
+
+    window.addEventListener('resize', renderChart);
+    loadData();
   </script>
 </body>
 </html>
